--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "understanding-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+    "start":"nodemon dist/app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "",
   "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  },
   "devDependencies": {
-    "lite-server": "^2.6.1",
-    "nodemon": "^3.1.7"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.10",
+    "nodemon": "^1.19.4"
   }
 }
